--- a/model_training_validation.ipynb
+++ b/model_training_validation.ipynb
@@ -12,7 +12,7 @@
         "This notebook includes three parts\n",
         "* Model fine-tune\n",
         "* Model Validation\n",
-        "* Model testing"
+        "* Model testing\n",
         "\n",
         "### References\n",
         "  * [kaggle: Real/Fake Job Posting Prediction](https://www.kaggle.com/datasets/shivamb/real-or-fake-fake-jobposting-prediction)\n",
